RESOLVED FIXED161483
[GTK] SetNativeSurfaceHandleForCompositing should not be compiled in for wayland build
https://bugs.webkit.org/show_bug.cgi?id=161483
Summary [GTK] SetNativeSurfaceHandleForCompositing should not be compiled in for wayl...
memeka
Reported 2016-09-01 04:24:16 PDT
when compiling with X11=OFF, WAYLAND=ON, build fails with error: Source/WebKit2/UIProcess/AcceleratedDrawingAreaProxy.cpp: In member function ‘void WebKit::AcceleratedDrawingAreaProxy::setNativeSurfaceHandleForCompositing(uint64_t)’: Source/WebKit2/UIProcess/AcceleratedDrawingAreaProxy.cpp:271:129: error: ‘DispatchMessageEvenWhenWaitingForSyncReply’ is not a member of 8:16 PM ‘IPC’ m_webPageProxy.process().send(Messages::DrawingArea::SetNativeSurfaceHandleForCompositing(handle), m_webPageProxy.pageID(), IPC::DispatchMessageEvenWhenWaitingForSyncReply); but SetNativeSurfaceHandleForCompositing should not be compiled in for Wayland.
Attachments
Patch (10.65 KB, patch)
2016-09-05 00:06 PDT, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2016-09-05 00:06:51 PDT
Carlos Garcia Campos
Comment 2 2016-09-05 01:00:06 PDT
Note You need to log in before you can comment on or make changes to this bug.